--- a/projects/uranus/package.json
+++ b/projects/uranus/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "uranus",
+  "name": "@theogonic/uranus",
   "version": "0.0.1",
+  "private": false,
   "peerDependencies": {
-    "@angular/common": "^12.1.0",
-    "@angular/core": "^12.1.0"
+    "@angular/common": "^13.3.0",
+    "@angular/core": "^13.3.0",
+    "@angular/material": "^13.2.6"
   },
   "dependencies": {
-    "tslib": "^2.2.0",
-    "@angular/material": "^13.2.6"
+    "tslib": "^2.2.0"
   }
 }
