--- a/projects/uranus/package.json
+++ b/projects/uranus/package.json
@@ -9,5 +9,13 @@
   },
   "dependencies": {
     "tslib": "^2.2.0"
+  },
+  "exports": {
+    "./theming": {
+      "sass": "./styles/_uranus-theme.scss"
+    }
+  },
+  "bin": {
+    "uranus-bibtex": "./scripts/uranus-bibtex.py"
   }
 }
